<resources>
    <string name="app_name">se2-simple-android</string>
    <string name="abschicken">Abschicken</string>
    <string name="antwort_vom_server">Antwort vom Server</string>
    <string name="gib_deine_matrikelnummer_ein">Gib deine Matrikelnummer ein</string>
    <string name="_0">{0}</string>
    <string name="main_activity_title">NetworkTest</string>
    <string name="berechnung">Berechnung</string>
    <string name="no_indizes">Keine</string>
    <string name="valid_number_error">Bitte gib eine gültige Zahl an!</string>
    <string name="output_factor_indizes_title">Gemeinsame Teilerindizes: %s</string>
</resources>