<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/textFieldInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="LabelFor"
            app:layout_constraintBottom_toTopOf="@+id/textViewServerResponseTitle"
            android:layout_marginBottom="92dp" />

    <TextView
            android:text="@string/gib_deine_matrikelnummer_ein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEnterMatnrTitle"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textFieldInput"
            android:layout_marginBottom="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:text="@string/antwort_vom_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewServerResponseTitle"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textViewButtonOutput"
            android:layout_marginBottom="32dp" />

    <Button
            android:text="@string/abschicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="144dp" />

    <TextView
            android:text="@string/_0"
            android:layout_width="311dp"
            android:layout_height="155dp"
            android:id="@+id/textViewButtonOutput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCalculate"
            android:textAlignment="center"
            android:layout_marginBottom="32dp" />

    <Button
            android:text="@string/berechnung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonCalculate"
            app:layout_constraintStart_toEndOf="@+id/buttonSend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            android:layout_marginBottom="144dp" />

</androidx.constraintlayout.widget.ConstraintLayout>